[MODORDERS-1372]. Use batch  endpoint to update items to reduce amount of calls during change Instance connection