@@ -71,8 +71,10 @@ public class InventoryItemManager {
 
   public static final String BARCODE_ALREADY_EXIST_ERROR = "lower(jsonb ->> 'barcode'::text) value already exists in table item";
   private static final String LOOKUP_ITEM_QUERY = "purchaseOrderLineIdentifier==%s and holdingsRecordId==%s";
-  private static final String ITEM_STOR_ENDPOINT = "/item-storage/items";
+  private static final String ITEM_STORAGE_ENDPOINT = "/item-storage/items";
+  private static final String BATCH_ITEMS_STORAGE_ENDPOINT = "/item-storage/batch/synchronous";
   private static final String BUILDING_PIECE_MESSAGE = "Building {} {} piece(s) for PO Line with id={}";
+  private static final String UPSERT = "upsert";
 
   private final RestClient restClient;
   private final CommonSettingsCache commonSettingsCache;
@@ -109,7 +111,7 @@ public class InventoryItemManager {
   }
 
   public Future<List<JsonObject>> getItemsByPoLineIdsAndStatus(List<String> poLineIds, String itemStatus, RequestContext requestContext) {
-    logger.debug("getItemsByStatus start");
+    logger.debug("getItemsByPoLineIdsAndStatus:: Started");
     List<Future<List<JsonObject>>> futures = StreamEx
       .ofSubLists(poLineIds, MAX_IDS_FOR_GET_RQ_15)
       .map(ids -> {
@@ -130,6 +132,7 @@ public class InventoryItemManager {
   }
 
   public Future<Void> updateItem(JsonObject item, RequestContext requestContext) {
+    logger.info("updateItem:: Updating item, id={}", item.getString("id"));
     RequestEntry requestEntry = new RequestEntry(INVENTORY_LOOKUP_ENDPOINTS.get(ITEM_BY_ID_ENDPOINT)).withId(item.getString(ID));
     return restClient.put(requestEntry, item, requestContext);
   }
@@ -235,7 +238,7 @@ public class InventoryItemManager {
   private Future<List<JsonObject>> searchStorageExistingItems(String poLineId, String holdingId, int expectedQuantity,
                                                               RequestContext requestContext) {
     String query = String.format(LOOKUP_ITEM_QUERY, poLineId, holdingId);
-    RequestEntry requestEntry = new RequestEntry(ITEM_STOR_ENDPOINT).withQuery(query).withOffset(0).withLimit(expectedQuantity);
+    RequestEntry requestEntry = new RequestEntry(ITEM_STORAGE_ENDPOINT).withQuery(query).withOffset(0).withLimit(expectedQuantity);
     return restClient.getAsJsonObject(requestEntry, requestContext)
       .map(itemsCollection -> {
         List<JsonObject> items = extractEntities(itemsCollection);
@@ -318,11 +321,11 @@ public class InventoryItemManager {
       Piece pieceWithHoldingId = new Piece().withHoldingId(holdingId);
       if (poLine.getOrderFormat() == ELECTRONIC_RESOURCE) {
         createMissingElectronicItems(compPO, poLine, pieceWithHoldingId, ITEM_QUANTITY, requestContext)
-          .onSuccess(idS -> itemFuture.complete(idS.get(0)))
+          .onSuccess(idS -> itemFuture.complete(idS.getFirst()))
           .onFailure(itemFuture::fail);
       } else {
         createMissingPhysicalItems(compPO, poLine, pieceWithHoldingId, ITEM_QUANTITY, requestContext)
-          .onSuccess(idS -> itemFuture.complete(idS.get(0)))
+          .onSuccess(idS -> itemFuture.complete(idS.getFirst()))
           .onFailure(itemFuture::fail);
       }
     } catch (Exception e) {
@@ -436,9 +439,9 @@ public class InventoryItemManager {
 
   private Future<String> createItemInInventory(JsonObject itemData, RequestContext requestContext) {
     Promise<String> promise = Promise.promise();
-    RequestEntry requestEntry = new RequestEntry(ITEM_STOR_ENDPOINT);
+    RequestEntry requestEntry = new RequestEntry(ITEM_STORAGE_ENDPOINT);
     String tenantId = TenantTool.tenantId(requestContext.getHeaders());
-    logger.info("Trying to create Item in inventory in tenant: {}", tenantId);
+    logger.info("createItemInInventory:: Trying to create Item in inventory in tenant: {}", tenantId);
     restClient.postJsonObjectAndGetId(requestEntry, itemData, requestContext)
       .onSuccess(promise::complete)
       // In case item creation failed, return null instead of id
@@ -463,4 +466,15 @@ public class InventoryItemManager {
       .orElseGet(List::of);
   }
 
+  public Future<Void> batchUpsertItems(List<JsonObject> items, RequestContext requestContext) {
+    logger.info("batchUpsertItems:: Updating items={}", items.size());
+    var requestEntry = new RequestEntry(BATCH_ITEMS_STORAGE_ENDPOINT);
+    requestEntry.withQueryParameter(UPSERT, true);
+    var tenantId = TenantTool.tenantId(requestContext.getHeaders());
+    logger.info("batchUpsertItems:: Trying to batch upsert items in inventory for tenant: {}", tenantId);
+    var payload = new JsonObject()
+      .put(InventoryUtils.ITEMS, items);
+    return restClient.postBatch(requestEntry, payload, JsonObject.class, requestContext)
+      .mapEmpty();
+  }
 }
